I'm working on a image slider ୨ৎ

--- a/martin.html
+++ b/martin.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="members-profile.css">
+    <link rel="stylesheet" href="members.css">
     <title>Martin Profile</title>
 </head>
 <body>
     <div>
         <table style="width: 100%; height: 100vh;">
             <tr style="height: 100%;">
-                <td style="width: 40%; text-align: center; vertical-align: middle;">
-                    <img src="images/martin.png" alt="Martin" style="width: 230px;">
+                <td style="width: 5%;">
+                    <button class="arrow prev"></button>
                 </td>
-                <td>
+                <td class="table-image-column">
+                    <img src="images/martin.png" alt="Martin" class="slide active">
+                    <img src="images/juhoon.png" alt="Martin" class="slide">
+                    <img src="images/james.png" alt="Martin" class="slide">
+                </td>
+                <td style="width: 5%;">
+                    <button class="arrow next"></button>
+                </td>
+                <td style="width: 60%;text-align: left; vertical-align: middle;">
                     <p><b>Stage Name: </b>Martin (마틴)</p>
                     <p><b>Birth Name: </b>Martin Edwards (에드워드 마틴)</p>
                     <p><b>Position: </b>Leader</p>
