--- a/members.html
+++ b/members.html
@@ -3,55 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="members.css">
     <title>Members</title>
 </head>
 <body>
     <div>
-        <h1>
-            Members
-        </h1>
-    </div>
-    <div>
-        <img>
-        <map>
-            <area>
-        </map>
-    </div>
-    <div>
-        <table style="width: 100%;">
-            <tr>
-                <td style="text-align: center;">
-                    <img src="holder.png" alt="Martin" style="width: 100px; height: 100px;">
+        <table style="width: 100%; height: 100vh;">
+            <tr style="width: 15%;">
+                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+                    <a href="juhoon.html" class="members-text">Juhoon</a>
                 </td>
-                <td style="text-align: center;">
-                    <img src="holder.png" alt="Juhoon" style="width: 100px; height: 100px;">
+                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+                    <a href="james.html" class="members-text">James</a>
                 </td>
-                <td style="text-align: center;">
-                    <img src="holder.png" alt="Seongyeon" style="width: 100px; height: 100px;">
+                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+                    <a href="martin.html" class="members-text">Martin</a>
                 </td>
-                <td style="text-align: center;">
-                    <img src="holder.png" alt="James" style="width: 100px; height: 100px;">
+                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+                    <a href="seonhyeon.html" class="members-text">Seonghyeon</a>
                 </td>
-                <td style="text-align: center;">
-                    <img src="holder.png" alt="Keonho" style="width: 100px; height: 100px;">
+                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+                    <a href="keonho.html" class="members-text">Keonho</a>
                 </td>
             </tr>
-            <tr>
-                <td style="text-align: center;">
-                    <a href="martin.html">Martin</a>
+            <tr style="height: 85%;">
+                <td style="width: 20%; text-align: center;">
+                    <img src="images/juhoon.png" alt="Juhoon" style="width: 200px;">
                 </td>
-                <td style="text-align: center;">
-                    <a href="juhoon.html">Juhoon</a>
+                <td style="width: 20%; text-align: center;">
+                    <img src="images/james.png" alt="James" style="width: 250px;">
                 </td>
-                <td style="text-align: center;">
-                    <a href="seonhyeon.html">Seongyeon</a>
+                <td style="width: 20%; text-align: center;">
+                    <img src="images/martin.png" alt="Martin" style="width: 190px;">
                 </td>
-                <td style="text-align: center;">
-                    <a href="james.html">James</a>
+                <td style="width: 20%; text-align: center;">
+                    <img src="images/seonhyeon.png" alt="Seonghyeon" style="width: 230px;">
                 </td>
-                <td style="text-align: center;">
-                    <a href="keonho.html">Keonho</a>
+                <td style="width: 20%; text-align: center;">
+                    <img src="images/keonho.png" alt="Keonho" style="width: 280px;">
                 </td>
             </tr>
         </table>
