--- a/james.html
+++ b/james.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="members-profile.css">
+    <link rel="stylesheet" href="members.css">
     <title>James Profile</title>
 </head>
 <body>
     <div>
         <table style="width: 100%; height: 100vh;">
             <tr style="height: 100%;">
+                <td style="width: 5%;">
+                    <button class="arrow prev"></button>
+                </td>
                 <td style="width: 40%; text-align: center; vertical-align: middle;">
                     <img src="images/james.png" alt="James" style="width: 470px;">
+                </td>
+                <td style="width: 5%;">
+                    <button class="arrow prev"></button>
                 </td>
                 <td>
                     <p><b>Stage Name: </b>James (제임스)</p>
