--- a/martin.html
+++ b/martin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="members.css">
+    <script src="members.js"></script>
     <title>Martin Profile</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <table style="width: 100%; height: 100vh;">
             <tr style="height: 100%;">
                 <td style="width: 5%;">
-                    <button class="arrow prev"></button>
+                    <button onclick="changeSlide(-1)" class="arrow prev"><</button>
                 </td>
                 <td class="table-image-column">
                     <img src="images/martin.png" alt="Martin" class="slide active">
@@ -19,7 +20,7 @@
                     <img src="images/james.png" alt="Martin" class="slide">
                 </td>
                 <td style="width: 5%;">
-                    <button class="arrow next"></button>
+                    <button onclick="changeSlide(1)" class="arrow next">></button>
                 </td>
                 <td style="width: 60%;text-align: left; vertical-align: middle;">
                     <p><b>Stage Name: </b>Martin (마틴)</p>
