I added the image slider to all of the members' profile and made slight adjustments :)

--- a/keonho.html
+++ b/keonho.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="members.css">
+    <script src="members.js"></script>
     <title>Keonho Profile</title>
 </head>
 <body>
     <div>
         <table style="width: 100%; height: 100vh;">
             <tr style="height: 100%;">
-                <td style="width: 40%; text-align: center; vertical-align: middle;"> 
-                    <img src="images/keonho.png" alt="Keonho" style="width: 400px;">
+                <td class="prev">
+                    <button><</button>
                 </td>
-                <td>
+                <td class="table-image-column"> 
+                    <img src="images/keonho.png" alt="Keonho" class="slide active" style="width: 200px;">
+                    <img src="images/james.png" alt="Keonho" class="slide" style="width: 300px;">
+                    <img src="images/juhoon.png" alt="Keonho" class="slide" style="width: 200px;">
+                </td>
+                <td class="next">
+                    <button>></button>
+                </td>
+                <td class="table-description">
                     <p><b>Stage Name: </b>Keonho (건호)</p>
                     <p><b>Birth Name: </b>Ahn Geon-ho (안건호)</p>
                     <p><b>Position: </b>Maknae, N/A</p>
