--- a/james.html
+++ b/james.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="members.css">
+    <script src="members.js"></script>
     <title>James Profile</title>
 </head>
 <body>
     <div>
         <table style="width: 100%; height: 100vh;">
             <tr style="height: 100%;">
-                <td style="width: 5%;">
-                    <button class="arrow prev"></button>
+                <td class="prev">
+                    <button><</button>
                 </td>
-                <td style="width: 40%; text-align: center; vertical-align: middle;">
-                    <img src="images/james.png" alt="James" style="width: 470px;">
+                <td class="table-image-column">
+                    <img src="images/james.png" alt="James" class="slide active" style="width: 470px;">
+                    <img src="images/martin.png" alt="James" class="slide" style="width: 200px;">
+                    <img src="images/seonhyeon.png" alt="James" class="slide" style="width: 200px;">
                 </td>
-                <td style="width: 5%;">
-                    <button class="arrow prev"></button>
+                <td class="next">
+                    <button>></button>
                 </td>
-                <td>
+                <td class="table-description">
                     <p><b>Stage Name: </b>James (제임스)</p>
                     <p><b>Birth Name: </b>Zhao Yufan (趙雨凡)</p>
                     <p><b>Position: </b>N/A</p>
