--- a/juhoon.html
+++ b/juhoon.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="members.css">
+    <script src="members.js"></script>
     <title>Juhoon Profile</title>
 </head>
 <body>
     <div>
         <table style="width: 100%; height: 100vh;">
             <tr style="height: 100%;">
-                <td style="width: 40%; text-align: center; vertical-align: middle;">
-                    <img src="images/juhoon.png" alt="Juhoon" style="width: 260px;">
+                <td class="prev">
+                    <button><</button>
                 </td>
-                <td>
+                <td class="table-image-column">
+                    <img src="images/juhoon.png" alt="Juhoon" class="slide active" style="width: 260px;">
+                    <img src="images/james.png" alt="Juhoon" class="slide" style="width: 260px;">
+                    <img src="images/martin.png" alt="Juhoon" class="slide" style="width: 260px;">
+                </td>
+                <td class="next">
+                    <button>></button>
+                </td>
+                <td class="table-description">
                     <p><b>Stage Name: </b>Juhoon (주훈)</p>
                     <p><b>Birth Name: </b>Kim Ju-hoon (김주훈)</p>
                     <p><b>Position: </b>N/A</p>
