--- a/martin.html
+++ b/martin.html
@@ -11,18 +11,18 @@
     <div>
         <table style="width: 100%; height: 100vh;">
             <tr style="height: 100%;">
-                <td style="width: 5%;">
-                    <button onclick="changeSlide(-1)" class="arrow prev"><</button>
+                <td class="prev">
+                    <button><</button>
                 </td>
                 <td class="table-image-column">
-                    <img src="images/martin.png" alt="Martin" class="slide active">
-                    <img src="images/juhoon.png" alt="Martin" class="slide">
-                    <img src="images/james.png" alt="Martin" class="slide">
+                    <img src="images/martin.png" alt="Martin" class="slide active" style="width: 200px;">
+                    <img src="images/juhoon.png" alt="Martin" class="slide" style="width: 200px;">
+                    <img src="images/james.png" alt="Martin" class="slide" style="width: 300px;">
                 </td>
-                <td style="width: 5%;">
-                    <button onclick="changeSlide(1)" class="arrow next">></button>
+                <td class="next">
+                    <button>></button>
                 </td>
-                <td style="width: 60%;text-align: left; vertical-align: middle;">
+                <td class="table-description">
                     <p><b>Stage Name: </b>Martin (마틴)</p>
                     <p><b>Birth Name: </b>Martin Edwards (에드워드 마틴)</p>
                     <p><b>Position: </b>Leader</p>
