--- a/app.html
+++ b/app.html
@@ -8,63 +8,65 @@
     <title>Cortis</title>
 </head>
 <body>
-    <div class="topbar">
-        <h1 class="topbar-text">CORTIS</h1>
-    </div>
+    <div style="width: 100%; height: 100%;">
+        <div class="topbar">
+            <h1 class="topbar-text">CORTIS</h1>
+        </div>
 
-    <div>
-        <table class="table">
-            <tr style="height: 20%;">
-                <td class="table-column">
-                    <a href="discography.html" class="table-text"><h1 id="discography-text">Discography</h1></a>
-                </td>
-                <td class="table-column">
-                    <a href="members.html" class="table-text"><h1 id="members-text">Members</h1></a>
-                </td>
-                <td class="table-column">
-                    <a href="merch.html" class="table-text"><h1 id="merch-text">Merch</h1></a>
-                </td>
-                <td class="table-column">
-                    <a href="minigames.html" class="table-text"><h1 id="minigames-text">Minigames</h1></a>
-                </td>
-            </tr>
-            <tr style="height: 80%;">
-                <td class="table-images"> 
-                    <a href="discography.html">
-                        <img id="discography-image" src="images/music.png" alt="Discography image" style="width: 220px;">
-                    </a>
-                </td>
-                <td class="table-images">
-                    <a href="members.html">
-                        <img id="members-image" src="images/members.png" alt="Members image" style="width: 210px;">
-                    </a>
-                </td>
-                <td class="table-images">
-                    <a href="merch.html">
-                    <img id="merch-image" src="images/merch.png" alt="Merch image" style="width: 230px;">
-                    </a>
-                </td>
-                <td class="table-images">
-                    <a href="minigames.html">
-                        <img id="minigame-image" src="images/console.png" alt="Minigames image" style="width: 180px;">
-                    </a>
-                </td>
-            </tr>
-        </table>
-    </div>
+        <div>
+            <table class="table">
+                <tr>
+                    <td class="table-column">
+                        <a href="discography.html" class="table-text"><h1 id="discography-text">Discography</h1></a>
+                    </td>
+                    <td class="table-column">
+                        <a href="members.html" class="table-text"><h1 id="members-text">Members</h1></a>
+                    </td>
+                    <td class="table-column">
+                        <a href="merch.html" class="table-text"><h1 id="merch-text">Merch</h1></a>
+                    </td>
+                    <td class="table-column">
+                        <a href="minigames.html" class="table-text"><h1 id="minigames-text">Minigames</h1></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="table-images"> 
+                        <a href="discography.html">
+                            <img id="discography-image" src="images/music.png" alt="Discography image" style="width: 220px;">
+                        </a>
+                    </td>
+                    <td class="table-images">
+                        <a href="members.html">
+                            <img id="members-image" src="images/members.png" alt="Members image" style="width: 210px;">
+                        </a>
+                    </td>
+                    <td class="table-images">
+                        <a href="merch.html">
+                        <img id="merch-image" src="images/merch.png" alt="Merch image" style="width: 230px;">
+                        </a>
+                    </td>
+                    <td class="table-images">
+                        <a href="minigames.html">
+                            <img id="minigame-image" src="images/console.png" alt="Minigames image" style="width: 180px;">
+                        </a>
+                    </td>
+                </tr>
+            </table>
+        </div>
 
-    <div class="start-info1">
-        <p>
-            CORTIS (코르티스) is a South Korean boy group formed by BigHit Music.<br>
-            They debuted on August 18, 2025, with the digital single "What You Want,"<br>
-            the lead track from their first extended play (EP), Color Outside the Lines.<br>
-        </p>
-    </div>
-    <div class="start-info2">
-        <p>
-            The name is derived from six letters taken from the phrase "Color Outside the Lines,"<br>
-            symbolizing the group's commitment to thinking freely and unconstrained by societal norms.
-        </p>
+        <div class="start-info1">
+            <p>
+                CORTIS (코르티스) is a South Korean boy group formed by BigHit Music. 
+                They debuted on August 18, 2025, with the digital single "What You Want," 
+                the lead track from their first extended play (EP), Color Outside the Lines.
+            </p>
+        </div>
+        <div class="start-info2">
+            <p>
+                The name is derived from six letters taken from the phrase "Color Outside the Lines," 
+                symbolizing the group's commitment to thinking freely and unconstrained by societal norms.
+            </p>
+        </div>
     </div>
 </body>
 </html>
