--- a/merch.html
+++ b/merch.html
@@ -9,15 +9,27 @@
 <body>
     <div class="grid">
         <div class="cell">
+            <div class="cell-image-row">
+                <img src="images/album-cover.png" alt="Product" class="slide active" style="width: 100%;">
+                <img src="images/album-cover.png" alt="Product" class="slide" style="width: 100%;">
+                <img src="images/album-cover.png" alt="Product" class="slide" style="width: 100%;">
+            </div>
+            <div>
+                <p>Info</p>
+                <p>Price</p>
+            </div>
+        </div>
+        <div class="cell">
             <table>
                 <tr>
                     <td>
-                        <img src="images/album-cover.png" style="width: 100%;">
+                        <img src="images/album-cover.png" alt="Product" class="slide" style="width: 100%;">
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <p>Info</p>
+                        <p>Price</p>
                     </td>
                 </tr>
             </table>
@@ -32,20 +44,7 @@
                 <tr>
                     <td>
                         <p>Info</p>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="cell">
-            <table>
-                <tr>
-                    <td>
-                        <img src="images/album-cover.png" style="width: 100%;">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <p>Info</p>
+                        <p>Price</p>
                     </td>
                 </tr>
             </table>
