--- a/merch.html
+++ b/merch.html
@@ -9,17 +9,6 @@
 <body>
     <div class="grid">
         <div class="cell">
-            <div class="cell-image-row">
-                <img src="images/album-cover.png" alt="Product" class="slide active" style="width: 100%;">
-                <img src="images/album-cover.png" alt="Product" class="slide" style="width: 100%;">
-                <img src="images/album-cover.png" alt="Product" class="slide" style="width: 100%;">
-            </div>
-            <div>
-                <p>Info</p>
-                <p>Price</p>
-            </div>
-        </div>
-        <div class="cell">
             <table>
                 <tr>
                     <td>
@@ -39,6 +28,21 @@
                 <tr>
                     <td>
                         <img src="images/album-cover.png" style="width: 100%;">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Info</p>
+                        <p>Price</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="cell">
+            <table>
+                <tr>
+                    <td>
+                        <img src="images/album-cover.png" alt="Product" class="slide" style="width: 100%;">
                     </td>
                 </tr>
                 <tr>
