I made a oon-hover image chnage for the merch section :)

--- a/merch.html
+++ b/merch.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="merch.css">
+    <script src="merch.js"></script>
     <title>Merch</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
             <table>
                 <tr>
                     <td>
-                        <img src="images/album-cover.png" alt="Product" class="slide" style="width: 100%;">
+                        <img src="images/album-cover-1.png" alt="Album ver. 1" id="album1" class="slide" style="width: 100%;">
                     </td>
                 </tr>
                 <tr>
@@ -27,7 +28,7 @@
             <table>
                 <tr>
                     <td>
-                        <img src="images/album-cover.png" style="width: 100%;">
+                        <img src="images/album-cover-2.png" id="album2" alt="Album ver. 2" style="width: 100%;">
                     </td>
                 </tr>
                 <tr>
@@ -42,7 +43,22 @@
             <table>
                 <tr>
                     <td>
-                        <img src="images/album-cover.png" alt="Product" class="slide" style="width: 100%;">
+                        <img src="images/album-cover-3.png" id="album3" alt="Product" id="merch-image" style="width: 100%;">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Info</p>
+                        <p>Price</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="cell">
+            <table>
+                <tr>
+                    <td>
+                        <img src="images/cortis-ball-1.png" id="cortisball" alt="Album ver. 3" class="slide" style="width: 100%;">
                     </td>
                 </tr>
                 <tr>
