I reformated the layout of everything so it fits different kinds of screens ^^

--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
     <title>Cortis</title>
 </head>
 <body>
-    <div style="width: 100%; height: 100%;">
+    <div style="width: 100vw; height: 100vh;">
         <div class="topbar">
             <h1 class="topbar-text">CORTIS</h1>
         </div>
@@ -17,37 +17,37 @@
             <table class="table">
                 <tr>
                     <td class="table-column">
-                        <a href="discography.html" class="table-text"><h1 id="discography-text">Discography</h1></a>
+                        <a href="discography.html" class="table-text"><p id="discography-text">Discography</p></a>
                     </td>
                     <td class="table-column">
-                        <a href="members.html" class="table-text"><h1 id="members-text">Members</h1></a>
+                        <a href="members.html" class="table-text"><p id="members-text">Members</p></a>
                     </td>
                     <td class="table-column">
-                        <a href="merch.html" class="table-text"><h1 id="merch-text">Merch</h1></a>
+                        <a href="merch.html" class="table-text"><p id="merch-text">Merch</p></a>
                     </td>
                     <td class="table-column">
-                        <a href="minigames.html" class="table-text"><h1 id="minigames-text">Minigames</h1></a>
+                        <a href="minigames.html" class="table-text"><p id="minigames-text">Minigames</p></a>
                     </td>
                 </tr>
                 <tr>
                     <td class="table-images"> 
                         <a href="discography.html">
-                            <img id="discography-image" src="images/music.png" alt="Discography image" style="width: 220px;">
+                            <img id="discography-image" src="images/music.png" alt="Discography image" style="width: 17vw;">
                         </a>
                     </td>
                     <td class="table-images">
                         <a href="members.html">
-                            <img id="members-image" src="images/members.png" alt="Members image" style="width: 210px;">
+                            <img id="members-image" src="images/members.png" alt="Members image" style="width: 16vw;">
                         </a>
                     </td>
                     <td class="table-images">
                         <a href="merch.html">
-                        <img id="merch-image" src="images/merch.png" alt="Merch image" style="width: 230px;">
+                        <img id="merch-image" src="images/merch.png" alt="Merch image" style="width: 17vw;">
                         </a>
                     </td>
                     <td class="table-images">
                         <a href="minigames.html">
-                            <img id="minigame-image" src="images/console.png" alt="Minigames image" style="width: 180px;">
+                            <img id="minigame-image" src="images/console.png" alt="Minigames image" style="width: 13vw;">
                         </a>
                     </td>
                 </tr>
