--- a/discography.html
+++ b/discography.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div>
-        <table style="width: 100%; height: 100vh;">
-            <tr style="height: 100%;">
-                <td style="width: 40%; text-align: center; vertical-align: middle;">
-                    <img src="images/album-cover.png" alt="Album: Color Outside the box" style="width: 400px;">
+        <table style="width: 100vw; height: 100vh;">
+            <tr style="height: 100vh;">
+                <td style="width: 40vw; text-align: center; vertical-align: middle;">
+                    <img src="images/album-cover.png" alt="Album: Color Outside the box" style="width: 25vw;">
                 </td>
-                <td>
+                <td style="width: 60vw;">
                     <p><b>EP: </b>Color Outside the Box</p>
                     <p><b>Release date: </b>August 18, 2025</p>
                     <p><b>Genre: </b>K-pop, with influences from hip-hop, psychedelic rock, and Y2K aesthetics</p>
