--- a/members.html
+++ b/members.html
@@ -7,40 +7,40 @@
     <title>Members</title>
 </head>
 <body>
-    <div>
-        <table style="width: 100%; height: 100vh;">
-            <tr style="width: 15%;">
-                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+    <div style="width: 100%; height: 100%;">
+        <table style="width: 100vw; height: 100vh;">
+            <tr style="height: 15vh;">
+                <td style="width: 20vw; text-align: center; vertical-align: bottom;">
                     <a href="juhoon.html" class="members-text">Juhoon</a>
                 </td>
-                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+                <td style="width: 20vw; text-align: center; vertical-align: bottom;">
                     <a href="james.html" class="members-text">James</a>
                 </td>
-                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+                <td style="width: 20vw; text-align: center; vertical-align: bottom;">
                     <a href="martin.html" class="members-text">Martin</a>
                 </td>
-                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+                <td style="width: 20vw; text-align: center; vertical-align: bottom;">
                     <a href="seonhyeon.html" class="members-text">Seonghyeon</a>
                 </td>
-                <td style="width: 20%; text-align: center; vertical-align: bottom;">
+                <td style="width: 20vw; text-align: center; vertical-align: bottom;">
                     <a href="keonho.html" class="members-text">Keonho</a>
                 </td>
             </tr>
-            <tr style="height: 85%;">
-                <td style="width: 20%; text-align: center;">
-                    <img src="images/juhoon.png" alt="Juhoon" style="width: 200px;">
+            <tr style="height: 80%;">
+                <td style="width: 20vw; text-align: center;">
+                    <img src="images/juhoon.png" alt="Juhoon" style="width: 12vw;">
                 </td>
-                <td style="width: 20%; text-align: center;">
-                    <img src="images/james.png" alt="James" style="width: 250px;">
+                <td style="width: 20vw; text-align: center;">
+                    <img src="images/james.png" alt="James" style="width: 15vw;">
                 </td>
-                <td style="width: 20%; text-align: center;">
-                    <img src="images/martin.png" alt="Martin" style="width: 190px;">
+                <td style="width: 20vw; text-align: center;">
+                    <img src="images/martin.png" alt="Martin" style="width: 11vw;">
                 </td>
-                <td style="width: 20%; text-align: center;">
-                    <img src="images/seonhyeon.png" alt="Seonghyeon" style="width: 230px;">
+                <td style="width: 20vw; text-align: center;">
+                    <img src="images/seonhyeon.png" alt="Seonghyeon" style="width: 13vw;">
                 </td>
-                <td style="width: 20%; text-align: center;">
-                    <img src="images/keonho.png" alt="Keonho" style="width: 280px;">
+                <td style="width: 20vw; text-align: center;">
+                    <img src="images/keonho.png" alt="Keonho" style="width: 16vw;">
                 </td>
             </tr>
         </table>
