reformated the members' profile pages as well :3

--- a/discography/joyride.html
+++ b/discography/joyride.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="joyride">
+    <div>
         <h2>
             Joyride
         </h2>
