--- a/discography/lulluby.html
+++ b/discography/lulluby.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class = "lulluby">
+    <div>
         <h2>
             Lulluby
         </h2>
