--- a/discography/fashion.html
+++ b/discography/fashion.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="fashion">
+    <div>
         <h2>
             Fashion
         </h2>
