--- a/discography/whatyouwant.html
+++ b/discography/whatyouwant.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="whatyouwant">
+    <div>
         <h2>
             What You Want
         </h2>
