--- a/martin.html
+++ b/martin.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div>
-        <table style="width: 100%; height: 100vh;">
-            <tr style="height: 100%;">
+        <table style="width: 100vw; height: 100vh;">
+            <tr style="height: 100vh;">
                 <td class="prev">
                     <button><</button>
                 </td>
                 <td class="table-image-column">
-                    <img src="images/martin.png" alt="Martin" class="slide active" style="width: 200px;">
-                    <img src="images/juhoon.png" alt="Martin" class="slide" style="width: 200px;">
-                    <img src="images/james.png" alt="Martin" class="slide" style="width: 300px;">
+                    <img src="images/martin.png" alt="Martin" class="slide active" style="width: 13vw;">
+                    <img src="images/juhoon.png" alt="Martin" class="slide" style="width: 13vw;">
+                    <img src="images/james.png" alt="Martin" class="slide" style="width: 13vw;">
                 </td>
                 <td class="next">
                     <button>></button>
