I created buttons in the go lyrics that translate the lyrics to korean, romanized version and english ^^

--- a/app.html
+++ b/app.html
@@ -67,6 +67,7 @@
                 symbolizing the group's commitment to thinking freely and unconstrained by societal norms.
             </p>
         </div>
+        <div style="height: 5vh;"></div>
     </div>
 </body>
 </html>
