--- a/discography.html
+++ b/discography.html
@@ -18,11 +18,11 @@
                     <p><b>Release date: </b>August 18, 2025</p>
                     <p><b>Genre: </b>K-pop, with influences from hip-hop, psychedelic rock, and Y2K aesthetics</p>
                     <p><b>Songs: </b></p>
-                    <p><a href="discography/go.html" class="song-text">GO!</a></p>
-                    <p><a href="discography/whatyouwant.html" class="song-text">What You Want</a></p>
-                    <p><a href="discography/fashion.html" class="song-text">Fashion</a></p>
-                    <p><a href="discography/joyride.html" class="song-text">Joyride</a></p>
-                    <p><a href="discography/lulluby.html" class="song-text">Lulluby</a></p>
+                    <p><a href="go.html" class="song-text">GO!</a></p>
+                    <p><a href="whatyouwant.html" class="song-text">What You Want</a></p>
+                    <p><a href="fashion.html" class="song-text">Fashion</a></p>
+                    <p><a href="joyride.html" class="song-text">Joyride</a></p>
+                    <p><a href="lulluby.html" class="song-text">Lulluby</a></p>
                 </td>
             </tr>
         </table>
