--- a/merch.html
+++ b/merch.html
@@ -8,6 +8,7 @@
     <title>Merch</title>
 </head>
 <body>
+    <div style="height: 5vh;"></div>
     <div class="grid">
         <div class="cell">
             <table>
