Added the translation buttons to fashion as well

--- a/fashion.html
+++ b/fashion.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="song.css">
+    <script src="song.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div>
+        <button onclick="translateToKorean()">korean</button>
+        <button onclick="translateToRomanized()">romanized</button>
+        <button onclick="translateToEnglish()">english</button>
+    </div>
+
+    <div id="lyrics">
         <h2>
             Fashion
         </h2>
@@ -88,6 +95,258 @@
             Fashion, fashion, fashion, fashion<br>
             Fashion, fashion, fashion, fashion (워, let's go)<br>
             Fashion, fashion, fashion, fashion (what? Fashion)<br>
+        </p>
+    </div>
+
+    <div id="korean">
+        <h2>
+            Fashion
+        </h2>
+        <p>
+            내 티, five bucks, 바지는 만원<br>
+            My vision 몇 억s, 몇 조s, Bezos<br>
+            동묘, what's up? 홍대, what's up? (워워)<br>
+            I make 'em famous, I call that, "Fashion" (워워)<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion (워, let's go)<br>
+            Fashion, fashion, fashion, fashion (what, what, what?)<br>
+            내 티, five bucks, 바지는 만원<br>
+            Let's get it (yeah), let's go, fashion, fashion (huh, huh)<br>
+        </p>
+        <p>
+            안건호, 내가 산 옷 보고 뭐라고 말해도, 지켜 내 고집 (yeah)<br>
+            후르츠 찜해 놓은 상품에 있었던 벨트는, now on my 허리, huh<br>
+            Sorry, my granny, 요즘 왜 안 오니? 섭하신 동묘 할머니<br>
+            여긴 비행기, huh, L.A.에서 앨범을 끝내고, 멋있게 돌아와, back on my swag<br>
+        </p>
+        <p>
+            Huh, huh, 외화 talk, huh, 환율 올라 매일 (빠빠)<br>
+            구제 판, got me looking fresh (빠빠)<br>
+            Pull up, boys, 샥샥 긁어내 (skrrt, skrrt)<br>
+            빈티지져스 (지져스)<br>
+        </p>
+        <p>
+            동묘에서 모여, 마치 세미나<br>
+            홍대에서 모여, 우린 set it off (set it off)<br>
+            청-청-청담동 한가운데까지, spreading out (yeah, brr)<br>
+            Squad is on the way, but we can't wrap it up (yeah)<br>
+        </p>
+        <p>
+            내 티, five bucks, 바지는 만원<br>
+            My vision 몇 억s, 몇 조s, Bezos<br>
+            동묘, what's up? 홍대, what's up? (워워)<br>
+            I make 'em famous, I call that, "Fashion" (워워)<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion (brr, let's go)<br>
+            Fashion, fashion, fashion, fashion (what, what, what?)<br>
+            내 티, five bucks, 바지는 만원 (yeah)<br>
+            Let's get it, let's go (let's go), fashion, fashion<br>
+        </p>
+        <p>
+            Yeah, 심장이 pop out, 첫눈에 바로 cop-cop<br>
+            Okay, 구제 짬밥 삼만원짜리 잠바<br>
+            Ay-yay-yay, feel like rock star, 확 met gala로 갈라, let's go<br>
+            Top designers, 홍대 맛보고, 환장 fashion<br>
+        </p>
+        <p>
+            Come and try, 동묘 생활에서, 난<br>
+            체력을 많이 닦아 놔, mosh pit 하는 법 배워 놔<br>
+            배워봐, 배워봐, 너도 빨리 배워 봐<br>
+            옷 무덤 속 다시 태어나, 빈티지져스 came alive<br>
+        </p>
+        <p>
+            동묘에서 모여, 마치 세미나<br>
+            홍대에서 모여, 우린 set it off (set it off)<br>
+            청-청-청담동 한가운데까지, spreading out (yeah, brr)<br>
+            Squad is on the way, but we can't wrap it up (yeah, skrrt)<br>
+        </p>
+        <p>
+            내 티, five bucks, 바지는 만원<br>
+            My vision 몇 억s, 몇 조s, Bezos<br>
+            동묘, what's up? 홍대, what's up? (워워)<br>
+            I make 'em famous, I call that, "Fashion"<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion (워, let's go)<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion (워, let's go)<br>
+            Fashion, fashion, fashion, fashion (what, what?)<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion (let's go)<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion (워, let's go)<br>
+            Fashion, fashion, fashion, fashion (what? Fashion)<br>
+        </p>
+    </div>
+
+    <div id="romanized">
+        <h2>
+            Fashion
+        </h2>
+        <p>
+            Nae ti, five bucks, bajineun manwon<br>
+            My vision myeot eoks, myeot jos, Bezos<br>
+            Dongmyo, wassup? hongdae (What?), wassup? (Woah-woah)<br>
+            I make them famous, I call that "Fashion" (Woah-woah)<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion (Woah, let's go)<br>
+            Fashion, fashion (What?), fashion (What?), fashion (What?)<br>
+            Nae ti, five bucks, bajineun manwon<br>
+            Let's get it (Yeah), let's go, fashion, fashion (Huh)<br>
+        </p>
+        <p>
+            Angeonho naega san ot bogo mworago malhaedo jikyeo nae gojip (Yeah)<br>
+            Hureucheu jjimhaenoeun sangpume isseotdeon belteuneun now on my heori, huh<br>
+            Sorry, my granny, huh, yojeum wae an oni? seopasin dongmyo halmeoni<br>
+            Yeogin bihaenggi, huh, LAesеo aelbeomeul kkеunnaego meositge dorawa, back on my swag<br>
+        </p>
+        <p>
+            Huh, huh, oehwa talk, huh, hwanyul olla maeil<br>
+            Guje pan, got me looking fresh (Hah, woo)<br>
+            Pull up boys, syaksyak geulgeonae (Skrrt, skrrt)<br>
+            Bintijijyeoseu<br>
+        </p>
+        <p>
+            Dongmyoeseo moyeo machi semina<br>
+            Hongdaeeseo moyeo urin set it off<br>
+            Cheo-cheo-cheongdamdong hangaundekkaji spreading out (Let's get it; Brr)<br>
+            Squad is on the way, but we can't wrap it up (Yeah)<br>
+        </p>
+        <p>
+            Nae ti, five bucks, bajineun manwon<br>
+            My vision myeot eoks, myeot jos, Bezos<br>
+            Dongmyo, wassup? hongdae (What?), wassup? (Woah-woah)<br>
+            I make them famous, I call that "Fashion" (Woah-woah)<br>
+        </p>
+        <p>
+            Fashion, fashion (Huh), fashion (What?), fashion (Let's go)<br>
+            Fashion, fashion (What?), fashion (What?), fashion (What?)<br>
+            Nae ti, five bucks, bajineun (Yeah) manwon (Yee)<br>
+            (Yeah) Let's get it, let's go (Let's go), fashion (Huh), fashion<br>
+        </p>
+        <p>
+            Yeah, simjangi pop out, cheonnune baro cop-cop, okay<br>
+            Guje jjambap sammanwonjjari jamba, ayy-ayy-ayy<br>
+            Feel like rockstar, hwak Met Galaro galla let's go<br>
+            Top designers, hongdae matbogo hwanjang fashion<br>
+        </p>
+        <p>
+            Come and try, dongmyo saenghwareseo nan (Wah)<br>
+            Cheryeogeul mani dakkanwa, mosh pit haneun beop baewonwa (Yeah)<br>
+            Baewobwa, baewobwa, neodo ppalli baewobwa<br>
+            Ot mudeom sok dasi taeeona, bintijijyeoseu came alive<br>
+        </p>
+        <p>
+            Dongmyoeseo moyeo machi semina<br>
+            Hongdaeeseo moyeo urin set it off<br>
+            Cheo-cheo-cheongdamdong hangaundekkaji spreading out (Let's get it)<br>
+            Squad is on the way, but we can't wrap it up (Yeah, skkrt)<br>
+        </p>
+        <p>
+            Nae ti (Hoo), five bucks, bajineun manwon<br>
+            My vision myeot eoks, myeot jos, Bezos<br>
+            Dongmyo, wassup? hongdae (What?), wassup? (Woah-woah)<br>
+            I make them famous, I call that "Fashion"<br>
+        </p>
+        <p>
+            Fashion (Hoo), fashion, fashion (What?), fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion (Woah), fashion (Let's go)<br>
+            Fashion, fashion (What?), fashion (What?), fashion<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+        </p>
+    </div>
+
+    <div id="english">
+        <h2>
+            Fashion
+        </h2>
+        <p>
+            My tee, five bucks, my pants, 10,000 won<br>
+            My vision, billions, trillions like Bezos<br>
+            Dongmyo, wassup? Hongdae, wassup?<br>
+            I make them famous, I call that, fashion<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+            My tee, five bucks, my pants, 10,000 won<br>
+            Let's get it, let's go, fashion, fashion<br>
+        </p>
+        <p>
+            An Keonho, no matter what you say about my clothes<br>
+            I hold my ground the belt from my fruits wish list, now on my waist<br>
+            Sorry, my granny, why don't you come lately? Dear Dongmyo granny<br>
+            I mean I'm on a plane, finished the album in LA, came back looking fly, back on my swag<br>
+        </p>
+        <p>
+            Foreign money talk, exchange rate daily up<br>
+            Thrift shop finds got me looking fresh<br>
+            Pull up boys, scraping away<br>
+            Vintage Jesus<br>
+        </p>
+        <p>
+            Dongmyo's where we gather, like a seminar<br>
+            Hongdae's where we gathеr, we set it off<br>
+            To the hеart of Cheongdam-dong, spreading out<br>
+            Squad is on the way, but we can't wrap it up<br>
+        </p>
+        <p>
+            My tee, five bucks, my pants, 10,000 won<br>
+            My vision, billions, trillions like Bezos<br>
+            Dongmyo, wassup? Hongdae, wassup?<br>
+            I make them famous, I call that, fashion<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+            My tee, five bucks, my pants, 10,000 won<br>
+            Let's get it, let's go, fashion, fashion<br>
+        </p>
+        <p>
+            Hearts pop, pop out, one look and cop-cop<br>
+            Thrift shop master 30,000 won bomber<br>
+            Feel like rockstar, it's Met Gala time, let's go<br>
+            Top designers, Hongdae got them inspired, fashion<br>
+        </p>
+        <p>
+            Come and try, Dongmyo life teaches me<br>
+            How to hone my energy, mosh pit method definitely<br>
+            Learn it, learn it, you better hurry and learn it<br>
+            From the graves of clothes we're revived, Vintage Jesus, came alive<br>
+        </p>
+        <p>
+            Dongmyo's where we gather, like a seminar<br>
+            Hongdae's where we gather, we set it off<br>
+            To the heart of Cheongdam-dong, spreading out<br>
+            Squad is on the way, but we can't wrap it up<br>
+        </p>
+        <p>
+            My tee, five bucks, my pants, 10,000 won<br>
+            My vision, billions, trillions like Bezos<br>
+            Dongmyo, wassup? Hongdae, wassup?<br>
+            I make them famous, I call that, fashion<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+        </p>
+        <p>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
+            Fashion, fashion, fashion, fashion<br>
         </p>
     </div>
 </body>
