--- a/joyride.html
+++ b/joyride.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <link rel="stylesheet" href="song.css">
+    <script src="song.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div>
+        <button onclick="translateToKorean()">korean</button>
+        <button onclick="translateToRomanized()">romanized</button>
+        <button onclick="translateToEnglish()">english</button>
+    </div>
+
+    <div id="lyrics">
         <h2>
             Joyride
         </h2>
@@ -63,6 +70,186 @@
             Yeah, yeah, yeah, we're on a joyride<br>
             Yeah, yeah, yeah, we're on a joyride<br>
             Driving so fast 가로질러 긴 밤<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+    </div>
+
+    <div id="korean">
+        <h2>
+            Joyride
+        </h2>
+        <p>
+            갇혀 이 건물 속에, 밤새<br>
+            No sun, no sky 얼굴은 창백 all day<br>
+            미쳐 난 flipping 마치 fried eggs, pancakes<br>
+            Bloodshot eyes tonight 도망가, 여길 벗어나<br>
+        </p>
+        <p>
+            'Cause, ooh<br>
+            우리는 꿈꿔왔지, 찰나의 해방<br>
+            달려, 부릉<br>
+            트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)<br>
+        </p>
+        <p>
+            이 자릴 떠, 지도는 집어치워 'cause we're on a joyride<br>
+            더 세게 speed it up 지금 기분 so high<br>
+            Driving so fast 가로질러 긴 밤<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Driving so fast 가로질러 긴 밤<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            범생이는 나의 past tence<br>
+            학교는 찍먹, 아지트로 came back<br>
+            인생이 폭풍이면 난<br>
+            내 drip 아래 춰 rain dance<br>
+        </p>
+        <p>
+            종일 뛰었었지<br>
+            폭주는 내 personality<br>
+            (마치) MJ, ever since twenty-three<br>
+            Rat snakes 담을 넘었지<br>
+        </p>
+        <p>
+            'Cause, ooh<br>
+            우리는 꿈꿔왔지, 찰나의 해방<br>
+            달려, 부릉<br>
+            트렁크에다 콜라 채워, 얼른 밟아 그 pedal (yah)<br>
+        </p>
+        <p>
+            이 자릴 떠, 지도는 집어치워 'cause we're on a joyride<br>
+            더 세게 speed it up 지금 기분 so high<br>
+            Driving so fast 가로질러 긴 밤<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Driving so fast 가로질러 긴 밤<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+    </div>
+
+    <div id="romanized">
+        <h2>
+            Joyride
+        </h2>
+        <p>
+            Gatyeo i geonmul soge bamsae<br>
+            No sun, no sky, eolgureun changbaek all day<br>
+            Michyeo nan flipping machi fried eggs, pancakes<br>
+            Bloodshot eyes tonight, domangga yeogil beoseona<br>
+        </p>
+        <p>
+            'Cause, ooh<br>
+            Urineun kkumkkwowatji challaui haebang<br>
+            Dallyeo bureung<br>
+            Teureongkeueda kolla chaewo, eolleun balba geu pedal<br>
+        </p>
+        <p>
+            I jaril tteo jidoneun jibeochiwo 'cause we're on a joyride<br>
+            Deo sege speed it up jigeum gibun so high<br>
+            Driving so fast, garojilleo gin bam<br>
+            Day to night, ridе, we're on a joyride<br>
+        </p>
+        <p>
+            Yеah, yeah, yeah, we're on a joyride<br>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Driving so fast, garojilleo gin bam<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            Beomsaengineun naui past tense<br>
+            Hakgyoneun jjingmeok ajiteuro came back<br>
+            Insaengi pokpungimyeon nan<br>
+            Nae drip arae chwo rain dance<br>
+        </p>
+        <p>
+            Jongil ttwieosseotji<br>
+            Pokjuneun nae personality<br>
+            Machi MJ, ever since '23<br>
+            Rat snakes, dameul neomeotji<br>
+        </p>
+        <p>
+            'Cause, ooh<br>
+            Urineun kkumkkwowatji challaui haebang<br>
+            Dallyeo bureung<br>
+            Teureongkeueda kolla chaewo, eolleun balba geu pedal<br>
+        </p>
+        <p>
+            I jaril tteo jidoneun jibeochiwo 'cause we're on a joyride<br>
+            Deo sege speed it up jigeum gibun so high<br>
+            Driving so fast, garojilleo gin bam<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Driving so fast, garojilleo gin bam<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+    </div>
+
+    <div id="english">
+        <h2>
+            Joyride
+        </h2>
+        <p>
+            Trapped inside this building all night<br>
+            No sun, no sky, my face pale all day<br>
+            I'm going crazy, flipping like fried eggs, pancakes<br>
+            Bloodshot eyes tonight, I run, escaping this place<br>
+        </p>
+        <p>
+            'Cause, ooh<br>
+            We've been dreaming of that fleeting freedom<br>
+            Run, vroom<br>
+            Fill the trunk with cola, hurry, step on that pedal<br>
+        </p>
+        <p>
+            Leave this place, toss the map away, 'cause we're on a joyride<br>
+            Push it harder, speed it up, right now I'm feeling so high<br>
+            Driving so fast, cutting across the long night<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Yeah, yeah, yeah, wе're on a joyride<br>
+            Driving so fast, cutting across the long night<br>
+            Day to night, ridе, we're on a joyride<br>
+        </p>
+        <p>
+            Being a model student is my past tense<br>
+            I came back to school as just a casual hideout<br>
+            If life is a storm, then<br>
+            I dance a rain dance under my drip<br>
+        </p>
+        <p>
+            I ran all day long<br>
+            Being reckless is my personality<br>
+            Like MJ, ever since '23<br>
+            Like rat snakes, I jumped over the wall<br>
+        </p>
+        <p>
+            'Cause, ooh<br>
+            We've been dreaming of that fleeting freedom<br>
+            Run, vroom<br>
+            Fill the trunk with cola, hurry, step on that pedal<br>
+        </p>
+        <p>
+            Leave this place, toss the map away, 'cause we're on a joyride<br>
+            Push it harder, speed it up, right now I'm feeling so high<br>
+            Driving so fast, cutting across the long night<br>
+            Day to night, ride, we're on a joyride<br>
+        </p>
+        <p>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Yeah, yeah, yeah, we're on a joyride<br>
+            Driving so fast, cutting across the long night<br>
             Day to night, ride, we're on a joyride<br>
         </p>
     </div>
